--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ backend/uploads/*.xls
 .DS_Store
 Thumbs.db
 
+# Videos and large files
+*.mp4
+*.mov
+*.avi
+
 # Python
 *.egg-info/
 .pytest_cache/
